desctop header, 2 main blocks and footer

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,10 @@
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
+@import "blocks/header";
+@import "blocks/footer";
+@import "blocks/main-banner";
+@import "blocks/gym";
 
 // ---------------------------------
 
