--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -18,7 +18,7 @@
   padding: 0;
   color: $gym-color;
   font-size: 48px;
-  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-weight: 600;
   line-height: normal;
   letter-spacing: 1.44px;
@@ -63,4 +63,22 @@
   left: 540px;
   width: 364px;
   height: 228px;
+}
+
+.main-gym__video-img {
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(20, 54, 122, 0.5);
+  }
+}
+
+.main-gym__video-video {
+  visibility: hidden;
 }
