--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,50 +1,120 @@
 .main-gym {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  gap: 80px;
-  margin-top: 120px;
-  margin-bottom: 230px;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+
+  @media (min-width: $vp-768) {
+    padding: 0 45px;
+    padding-bottom: 183px;
+  }
+
+  @media (min-width: $vp-1366) {
+    display: flex;
+    justify-content: space-between;
+    gap: 80px;
+    margin-top: 120px;
+    margin-bottom: 230px;
+    padding: 0 103px;
+  }
 }
 
 .main-gym__wrapper {
-  padding-top: 38px;
-  padding-left: 60px;
-  max-width: 410px;
+  @media (min-width: $vp-768) {
+  }
+
+  @media (min-width: $vp-1366) {
+    padding-top: 38px;
+    padding-left: 60px;
+    max-width: 410px;
+  }
 }
 
 .main-gym__title {
   margin: 0;
   padding: 0;
+  margin-top: 63px;
   color: $gym-color;
-  font-size: 48px;
   font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 1.44px;
-  padding-bottom: 6px;
+  padding-bottom: 5px;
+  padding-left: 16px;
+  font-size: 32px;
+  letter-spacing: 0.96px;
+
+  @media (min-width: $vp-768) {
+    margin-top: 100px;
+    font-size: 42px;
+    margin-right: 17px;
+    text-align: center;
+    padding-bottom: 0;
+    letter-spacing: 1.2px;
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 48px;
+    letter-spacing: 1.44px;
+    padding-bottom: 6px;
+    padding-left: 0;
+    margin-top: 0;
+    text-align: start;
+  }
 }
 
 .main-gym__subtitle {
   margin: 0;
   padding: 0;
+  padding-bottom: 24px;
   color: $gym-color;
   font-size: 18px;
   font-weight: 400;
   line-height: 150%;
-  padding-bottom: 39px;
+  padding-left: 16px;
+
+  @media (min-width: $vp-768) {
+    text-align: center;
+    padding-bottom: 34px;
+  }
+
+  @media (min-width: $vp-1366) {
+    padding-bottom: 39px;
+    padding-left: 0;
+    text-align: start;
+  }
 }
 
 .main-gym__text {
   margin: 0;
   padding: 0;
+  padding-bottom: 33px;
+  margin-right: 44px;
   color: $gym-color;
   font-size: 16px;
   font-weight: 300;
   line-height: 150%;
+  padding-left: 16px;
 
   &:last-of-type {
-    padding-top: 8px;
+    display: none;
+  }
+
+  @media (min-width: $vp-768) {
+    text-align: center;
+    margin: 0;
+    padding: 0 80px;
+    padding-bottom: 44px;
+  }
+
+  @media (min-width: $vp-1366) {
+    padding: 0;
+    text-align: start;
+
+    &:last-of-type {
+      display: block;
+      padding: 0;
+      padding-top: 8px;
+    }
   }
 }
 
@@ -53,20 +123,44 @@
 
 .main-gym__photo {
   display: block;
-  width: 660px;
-  height: 401px;
+  width: 100vh;
+  margin-bottom: 40px;
+
+  @media (min-width: $vp-768) {
+    width: 678px;
+    height: 345px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $vp-1366) {
+    width: 660px;
+    height: 401px;
+  }
 }
 
 .main-gym__video {
-  position: absolute;
-  bottom: -112px;
-  left: 540px;
-  width: 364px;
-  height: 228px;
+  @media (min-width: $vp-768) {
+    position: absolute;
+    bottom: 101px;
+    left: 251px;
+    width: 266px;
+    height: 167px;
+  }
+
+  @media (min-width: $vp-1366) {
+    bottom: -114px;
+    left: 540px;
+    width: 364px;
+    height: 228px;
+  }
 }
 
 .main-gym__video-img {
   position: relative;
+  img {
+    height: 167px;
+  }
+
   &::after {
     content: '';
     display: block;
@@ -76,6 +170,12 @@
     top: 0;
     left: 0;
     background: rgba(20, 54, 122, 0.5);
+  }
+
+  @media (min-width: $vp-768) {
+    img {
+      height: auto;
+    }
   }
 }
 
