--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,23 +7,49 @@
 }
 
 .header-nav {
-  padding-top: 40px;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: $vp-768) {
+    padding-top: 40px;
+  }
 }
 
 .header-nav__logo {
   display: block;
 }
 
+.header-nav__logo-img {
+  @media (min-width: $vp-768) {
+    min-width: 82px;
+    height: 17px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin-top: -10px;
+    min-width: 122px;
+    height: 44px;
+  }
+}
+
 .header-nav__phone {
   margin: 0;
   padding: 0;
-  margin-top: -6px;
   color: $color-default-white;
-  font-size: 20px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.78px;
+
+  @media (min-width: $vp-768) {
+    margin-top: 0;
+    font-size: 18px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin-top: -6px;
+    font-size: 20px;
+  }
 }
