--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -1,41 +1,85 @@
 .main-banner {
   padding-top: 70px;
-  display: flex;
-  gap: 59px;
-  background-image: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+  background: conic-gradient(from 167deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+
+  @media (min-width: $vp-768) {
+    display: flex;
+    gap: 30px;
+    background: conic-gradient(from 155deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+  }
+
+  @media (min-width: $vp-1366) {
+    gap: 59px;
+    background-image: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+  }
 }
 
 .main-banner__wrapper {
-  margin-top: 96px;
-  margin-left: 19px;
-  padding-bottom: 96px;
+  margin-top: 42px;
+  padding-bottom: 80px;
+
+  @media (min-width: $vp-768) {
+    margin-top: 65px;
+    margin-left: 0;
+    padding-bottom: 104px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin-top: 96px;
+    margin-left: 19px;
+    padding-bottom: 96px;
+  }
 }
 
 .main-banner__city {
   margin: 0;
   padding: 0;
-  margin-right: 55px;
+  font-size: 24px;
   text-transform: uppercase;
   text-align: end;
   color: $color-default-white;
-  font-size: 44px;
   font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   letter-spacing: 1.44px;
+
+  @media (min-width: $vp-768) {
+    font-size: 29px;
+    margin-right: 12px;
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 44px;
+    margin-right: 55px;
+  }
 }
 
 .main-banner__block {
   display: flex;
-  gap: 14px;
+
+  @media (min-width: $vp-768) {
+    gap: 24px;
+  }
+
+  @media (min-width: $vp-1366) {
+    gap: 14px;
+  }
 }
 
 .main-banner__list {
   margin: 0;
   padding: 0;
-  margin-top: 136px;
+  margin-top: 94px;
+  margin-right: -13px;
   list-style-type: none;
+
+  @media (min-width: $vp-768) {
+    margin-top: 99px;
+  }
+  @media (min-width: $vp-1366) {
+    margin-top: 136px;
+  }
 }
 
 .main-banner__item {
@@ -52,33 +96,57 @@
 .main-banner__title {
   margin: 0;
   padding: 0;
-  margin-top: 10px;
+  margin-top: 13px;
   color: $color-default-white;
   text-align: right;
-  font-size: 96px;
-  font-family: Alumni Sans;
+  font-size: 72px;
+  font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-style: normal;
-  text-transform: uppercase;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 4.6px;
+  letter-spacing: 3.6px;
+
+  @media (min-width: $vp-768) {
+    font-size: 74px;
+    margin-right: 0;
+    letter-spacing: 3.6px;
+    margin-top: 9px;
+    margin-left: 11px;
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 96px;
+    text-transform: uppercase;
+  }
 }
 
 .main-banner__img-wrapper {
-  margin: 0;
-  padding: 0;
-  margin-top: -19px;
+  display: none;
+  @media (min-width: $vp-768) {
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin-top: 11px;
+  }
 }
 
 .main-banner__img {
+  @media (min-width: $vp-768) {
+    min-width: 324px;
+    min-height: 390px;
+    margin-left: 3px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin: -30px;
+  }
 }
 
 .main-banner__button {
   display: inline-block;
   margin: 0;
-  margin-top: 43px;
-  margin-left: 143px;
-  padding: 20px 55px;
+  margin-top: 21px;
+  padding: 21px 81px;
   color: $color-default-white;
   font-size: 12px;
   font-weight: 700;
@@ -87,4 +155,17 @@
   text-transform: uppercase;
   border: 4px solid $color-default-white;
   text-align: center;
+  white-space: nowrap;
+
+  @media (min-width: $vp-768) {
+    margin-top: 34px;
+    margin-left: 140px;
+    padding: 19px 30px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin-top: 43px;
+    margin-left: 143px;
+    padding: 20px 55px;
+  }
 }
