--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,18 +1,42 @@
 .subscription {
+  position: relative;
   background: $subscription-color;
-  padding: 123px 103px;
+
+  @media (min-width: $vp-768) {
+    padding: 100px 45px;
+  }
+
+  @media (min-width: $vp-1366) {
+    padding: 123px 103px;
+    padding-bottom: 72px;
+  }
+}
+
+.subscription__image {
+  display: block;
+  position: absolute;
+  bottom: -151px;
+  right: 0;
 }
 
 .subscription__title {
   padding: 0;
   margin: 0;
   text-align: center;
-  font-size: 54px;
   font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 1.62px;
   color: $gym-color;
+
+  @media (min-width: $vp-768) {
+    font-size: 42px;
+    letter-spacing: 1.26px;
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 54px;
+    letter-spacing: 1.62px;
+  }
 }
 
 .subscription__list {
@@ -33,6 +57,20 @@
     height: 1px;
     left: 35.5%;
     background-color: rgba(120, 120, 120, 0.2);
+  }
+
+  @media (min-width: $vp-768) {
+    bottom: -11px;
+    width: 340px;
+    height: 1px;
+    left: 24.5%;
+  }
+
+  @media (min-width: $vp-1366) {
+    bottom: -11px;
+    width: 340px;
+    height: 1px;
+    left: 35.5%;
   }
 }
 
@@ -69,10 +107,16 @@
   padding: 0;
   margin: 0;
   padding: 49px 0;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
   list-style-type: none;
+
+  @media (min-width: $vp-768) {
+  }
+
+  @media (min-width: $vp-1366) {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+  }
 }
 
 .subscription__sub-item {
@@ -80,6 +124,7 @@
   padding: 0;
   margin: 0;
   padding: 49px 68px;
+  padding-bottom: 58px;
   background-color: $color-default-white;
   border: 7px solid transparent;
 
