--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -138,7 +138,9 @@
   }
 
   @media (min-width: $vp-1366) {
-    margin: -30px;
+    margin-top: -30px;
+    min-width: 500px;
+    min-height: 556px;
   }
 }
 
