--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,10 @@
 @import 'blocks/gym';
 @import 'blocks/subscription';
 @import 'blocks/competition';
+@import 'blocks/swiper';
+@import 'blocks/trainers';
+@import 'blocks/features';
+@import 'blocks/promo';
 
 // ---------------------------------
 
