--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,10 +17,15 @@ $sub-text: #495a7d;
 $price: #103aae;
 $whisper: #e8e8e8;
 $torch-red: #ed0233;
+$spindle: #b6bdcc;
+$ghost-white: #f8f9fc;
+$percian-blue: #2e35ac;
+$resolution-blue: #1c3374;
 
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$red-blue-right: linear-gradient(to right bottom, #d10a42, #00359f);
 
 // Typography
 // ---------------------------------
