--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -1,50 +1,109 @@
 .competition {
   position: relative;
-  padding-top: 120px;
-  padding-bottom: 80px;
+
+  padding-bottom: 66px;
+
+  @media (min-width: $vp-768) {
+    padding-top: 100px;
+  }
+  @media (min-width: $vp-1366) {
+    padding-top: 120px;
+  }
 }
 
 .competition__wrapper {
   background-color: $torch-red;
-  padding: 79px 78px;
+  padding-bottom: 49px;
+
+  @media (min-width: $vp-768) {
+    padding: 12px 44px;
+  }
+  @media (min-width: $vp-1366) {
+    padding: 41px 78px;
+  }
 }
 
 .competition__wrap {
   display: flex;
+  flex-direction: column;
+
+  @media (min-width: $vp-768) {
+    flex-direction: row;
+  }
+  @media (min-width: $vp-1366) {
+    flex-direction: row;
+  }
 }
 
 .competition__containter {
   display: flex;
   align-items: center;
-  gap: 60px;
-  padding-bottom: 12px;
+  justify-content: center;
+  gap: 34px;
+  margin-top: 46px;
+
+  @media (min-width: $vp-768) {
+    justify-content: start;
+    margin-top: 35px;
+  }
+  @media (min-width: $vp-1366) {
+    gap: 60px;
+    padding-bottom: 12px;
+  }
 }
 
 .competition__title {
   padding: 0;
   margin: 0;
-  margin-left: 12px;
+  margin-left: 4px;
   margin-top: -11px;
+  line-height: 96%;
+  font-size: 48px;
+  letter-spacing: 1.44px;
   text-transform: uppercase;
   font-family: 'Alumni Sans', 'Arial', sans-serif;
   color: $color-default-white;
-  font-size: 82px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 96%;
-  letter-spacing: 2.46px;
+
+  @media (min-width: $vp-768) {
+    margin-top: -6px;
+    margin-left: 9px;
+  }
+
+  @media (min-width: $vp-1366) {
+    margin-left: 12px;
+    margin-top: -11px;
+    font-size: 82px;
+    letter-spacing: 2.46px;
+  }
 }
 
 .competition__subtitle {
   padding: 0;
   margin: 0;
   color: $color-default-white;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 150%;
 
   &--text {
-    margin-bottom: 46px;
+    margin-bottom: 28px;
+    margin-left: 43px;
+  }
+
+  @media (min-width: $vp-768) {
+    font-size: 12px;
+
+    &--text {
+      margin-left: 0;
+    }
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 18px;
+
+    &--text {
+      margin-bottom: 46px;
+    }
   }
 }
 
@@ -52,40 +111,104 @@
   padding: 0;
   margin: 0;
   color: $color-default-white;
-  font-size: 39px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 150%;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $color-default-white;
+  }
+
+  @media (min-width: $vp-768) {
+    font-size: 24px;
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 39px;
+
+    &::after {
+      top: 7px;
+    }
+  }
 }
 
 .competition__time-wrapper {
   display: flex;
   align-items: center;
-  gap: 7px;
-  margin-bottom: 12px;
+  gap: 3px;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 73%;
+    height: 1px;
+    background-color: $color-default-white;
+  }
+
+  @media (min-width: $vp-768) {
+    gap: 3px;
+  }
+
+  @media (min-width: $vp-1366) {
+    gap: 7px;
+    margin-bottom: 12px;
+
+    &::after {
+      top: 7px;
+    }
+  }
 }
 
 .competition__text {
   padding: 0;
   margin: 0;
   color: $color-default-white;
-  font-size: 14px;
+  font-size: 10px;
   font-weight: 400;
   line-height: 150%;
+
+  @media (min-width: $vp-768) {
+  }
+
+  @media (min-width: $vp-1366) {
+    font-size: 14px;
+  }
 }
 
 .comtetition__link {
   padding: 0;
-  margin: 0;
+  margin: 0 42px;
   display: block;
   text-align: center;
-  padding: 25px 53px;
+  padding: 13px 10px;
   color: $color-default-white;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 700;
   line-height: normal;
-  letter-spacing: 0.5px;
   border: 2px solid $color-default-white;
   text-transform: uppercase;
+
+  @media (min-width: $vp-768) {
+    margin: 0;
+    padding: 13px 48px;
+    font-size: 10px;
+    letter-spacing: 0.5px;
+  }
+
+  @media (min-width: $vp-1366) {
+    padding: 25px 53px;
+    font-size: 12px;
+  }
 }
 
 .competition__image {
