--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -9,7 +9,7 @@
     padding-bottom: 52px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     padding: 123px 103px;
     padding-bottom: 72px;
   }
@@ -29,7 +29,7 @@
     }
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     bottom: -151px;
   }
 }
@@ -50,7 +50,7 @@
     letter-spacing: 1.26px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     font-size: 54px;
     letter-spacing: 1.62px;
   }
@@ -65,11 +65,12 @@
   gap: 45px;
   list-style-type: none;
   margin-top: 19px;
+  padding-bottom: 12px;
 
   &::after {
     content: '';
     position: absolute;
-    bottom: -11px;
+    bottom: 1px;
     width: 290px;
     height: 1px;
     left: 0;
@@ -80,27 +81,31 @@
     gap: 46px;
 
     &::after {
-      bottom: -11px;
+      bottom: 1px;
       width: 340px;
       height: 1px;
       left: 24.5%;
     }
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     &::after {
-      bottom: -11px;
+      bottom: 1px;
       width: 340px;
       height: 1px;
       left: 35.5%;
     }
   }
-}
 
-.subscription__item {
+  @media (min-width: $vp-1200) {
+    &::after {
+      left: 37.5%;
+    }
+  }
 }
 
 .subscription__tab {
+  display: block;
   background: none;
   position: relative;
   border: none;
@@ -110,8 +115,9 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  cursor: pointer;
 
-  &--active {
+  &.is-active {
     color: $gym-color;
     &::after {
       content: '';
@@ -133,22 +139,32 @@
   position: relative;
   padding: 0;
   margin: 0 auto;
-  padding: 49px 0;
-  display: flex;
+  padding: 40px 0;
+  display: none;
   flex-direction: column;
   list-style-type: none;
   align-items: center;
   gap: 33px;
+
+  &.is-active {
+    display: flex;
+  }
+
   @media (min-width: $vp-768) {
     padding: 49px 0;
     gap: 40px;
   }
 
-  @media (min-width: $vp-1366) {
-    display: flex;
+  @media (min-width: $vp-1200) {
+    display: none;
     flex-direction: row;
     justify-content: center;
     gap: 40px;
+    padding-top: 34px;
+
+    &.is-active {
+      display: flex;
+    }
   }
 }
 
@@ -159,8 +175,10 @@
   padding-bottom: 47px;
   background-color: $color-default-white;
   border: 7px solid transparent;
+  transition: $trans-modal;
 
-  &--active {
+  &:hover,
+  &:focus {
     border: 7px solid;
     border-image: linear-gradient(to right bottom, #d10a42, #00359f);
     border-image-slice: 1;
@@ -172,7 +190,7 @@
     width: 442px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     width: 360px;
   }
 }
@@ -258,7 +276,7 @@
     font-size: 100px;
     left: 45px;
   }
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     left: 3px;
   }
 }
@@ -276,10 +294,20 @@
   color: $gym-color;
   border: 2px solid $gym-color;
 
-  &--active {
+  &:hover,
+  &:focus {
     border: none;
+    padding: 26px 45px;
     color: $color-default-white;
     background: var(--1, linear-gradient(151deg, #ed0233 0%, #003eb7 100%));
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.5);
+  }
+
+  &:disabled {
+    opacity: 0.3;
   }
 
   @media (min-width: $vp-768) {
