--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -8,7 +8,7 @@
     background: conic-gradient(from 155deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     gap: 59px;
     background-image: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
   }
@@ -24,7 +24,7 @@
     padding-bottom: 104px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     margin-top: 96px;
     margin-left: 19px;
     padding-bottom: 96px;
@@ -49,7 +49,7 @@
     margin-right: 12px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     font-size: 44px;
     margin-right: 55px;
   }
@@ -62,7 +62,7 @@
     gap: 24px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     gap: 14px;
   }
 }
@@ -77,7 +77,7 @@
   @media (min-width: $vp-768) {
     margin-top: 99px;
   }
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     margin-top: 136px;
   }
 }
@@ -114,7 +114,7 @@
     margin-left: 11px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     font-size: 96px;
     text-transform: uppercase;
   }
@@ -137,7 +137,7 @@
     margin-left: 3px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     margin-top: -30px;
     min-width: 500px;
     min-height: 556px;
@@ -158,6 +158,20 @@
   border: 4px solid $color-default-white;
   text-align: center;
   white-space: nowrap;
+  transition: $trans-default;
+
+  &:hover {
+    color: $price;
+    background-color: $color-default-white;
+  }
+
+  &:active {
+    color: $gym-color;
+  }
+
+  &:disabled {
+    opacity: 0.5;
+  }
 
   @media (min-width: $vp-768) {
     margin-top: 34px;
@@ -165,7 +179,7 @@
     padding: 19px 30px;
   }
 
-  @media (min-width: $vp-1366) {
+  @media (min-width: $vp-1200) {
     margin-top: 43px;
     margin-left: 143px;
     padding: 20px 55px;
