--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,12 +2,14 @@
 // ---------------------------------
 
 @import 'vendor/normalize';
+@import 'data-tabs.scss';
+@import 'tabs.scss';
+@import 'data-accordion.scss';
+@import 'accordion.scss';
 // Swiper 7.4.1
 // @import "vendor/swiper";
-
 // Global
 // ---------------------------------
-
 @import 'variables';
 @import 'mixins';
 @import 'global/fonts';
@@ -33,6 +35,7 @@
 @import 'blocks/trainers';
 @import 'blocks/features';
 @import 'blocks/promo';
+@import 'blocks/faq';
 
 // ---------------------------------
 
