--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,8 +36,7 @@
 @import 'blocks/features';
 @import 'blocks/promo';
 @import 'blocks/faq';
-
-// ---------------------------------
+@import 'blocks/review'; // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
 
