--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -16,7 +16,6 @@
 .promo__title {
   margin: 0;
   padding: 0;
-
   color: $gym-color;
   font-family: 'Alumni Sans', 'Arial', sans-serif;
   font-size: 32px;
@@ -44,6 +43,7 @@
   display: flex;
   flex-direction: column;
   gap: 33px;
+  justify-content: center;
 
   @media (min-width: $vp-768) {
     gap: 30px;
